[package]
name = "enhance-cpu-memory"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
sysinfo = "0.29"
ctrlc = "3.4"
num_cpus = "1.16"
bytesize = "1.3"
fork = { version = "0.1", optional = true }

[features]
default = ["unix-support"]
unix-support = ["fork"]

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+crt-static"]

